fixed h4 spacing

--- a/css/site.css
+++ b/css/site.css
@@ -248,7 +248,7 @@ h2{
 }
 
 #spartanprojects h2{
-    padding-bottom: 1em;
+    padding-bottom: .5em;
 } 
 
 #spartanprojects h4{
